# Computer-Graphics-CSE-410-BUET

./: .gitignore  README.md
Modeling Transformation/Assignment 2/: CMakeLists.txt  main.cpp  run.sh
OpenGL/Assignment 1/OpenGL/: CMakeLists.txt  EventHandler.cpp  Online.cpp  OpenGL.sln  OpenGl.vcxproj  OpenGl.vcxproj.filters  Sierpinski.cpp  Sphere.cpp  Sphere.vcxproj  Wheel.cpp  Wheel.vcxproj  main.cpp
OpenGL/Demo Code/OpenGL_Visual_Studio/: OpenGl.sln
OpenGL/Demo Code/OpenGL_Visual_Studio/OpenGl/: 1.cpp  2.cpp  3.cpp  OpenGl.vcxproj  OpenGl.vcxproj.filters
Ray Tracing/Assignment 3/: description.txt
Ray Tracing/Assignment 3/RayTracing/: CMakeLists.txt  Utils.hpp  main.cpp  run.bat
Ray Tracing/Assignment 3/bmp demo/: bmp_demo.cpp
